# Plugger

./: Makefile  Makefile.am  configure.ac  myotherplugin.vala  myplugin.vala  plugger.vala  plugin.vala
